fix(a11y): contrast for active menubar buttons
Dropdown menus (headings and callouts) are still low contrast.

--- a/src/components/Menu/ActionEntry.scss
+++ b/src/components/Menu/ActionEntry.scss
@@ -1,12 +1,3 @@
-%text__is-active-item-btn {
-	opacity: 1;
-	background-color: var(--color-primary-element-light);
-	border-radius: 50%;
-	.material-design-icon > svg {
-		fill: var(--color-primary-element);
-	}
-}
-
 .text-menubar, .v-popper__inner {
 	button.entry-action__button {
 		height: 44px;
@@ -49,20 +40,6 @@
 			box-shadow: var(--color-primary-element);
 		}
 
-		&.is-active {
-			@extend %text__is-active-item-btn;
-		}
-	}
-
-	.entry-action.is-active:not(.entry-action-item) {
-		@extend %text__is-active-item-btn;
-	}
-
-	.entry-action.entry-action-item {
-		&.is-active {
-			background-color: var(--color-primary-element-light);
-			border-radius: var(--border-radius-large);
-		}
 	}
 
 	.button-vue {
